# rust-server

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  docker-compose.yml
.dev/: settings.toml
.github/workflows/: rust-server.yml
lib/sql/: Cargo.toml
lib/sql/sql_macros/: Cargo.toml
lib/sql/sql_macros/src/: lib.rs  proc_sql.rs
lib/sql/src/: lib.rs
macros/: Cargo.toml
macros/src/: lib.rs  proc_format_uri.rs  proc_sql.rs
migrations/: 20250219124200_uuid7.sql  20250219124600_initial.sql
src/: app.rs  context.rs  db.rs  error.rs  logging.rs  main.rs  tests.rs
src/app/: api_error.rs  extractors.rs  routes.rs  server.rs
src/app/extractors/: context.rs  input_path.rs  request_context.rs
src/app/models/: thing.rs
src/app/routes/: get_root.rs  post_thing.rs  thing.rs
src/app/routes/thing/: delete_thing.rs  get_thing.rs  post_thing.rs
src/context/: config.rs  context.rs  env.rs
src/db/: database.rs  migrate.rs  schema.rs  utils.rs
src/db/schema/: thing.rs
src/macros/: set.rs
src/service/: thing.rs
src/service/thing/: add_new_thing.rs  delete_thing.rs  find_thing.rs
src/tests/: db_test.rs  macros.rs  test_env.rs  thing_test.rs
