[package]
name = "rust-server"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["lib/sql", "macros"]

[workspace.dependencies]
assert_json = { version = "0.1.0" }
async-trait = { version = "0.1.86" }
async-stream = { version = "0.3.6" }
axum = { version = "0.8.1", features = ["default", "tracing", "macros", "http2"] }
futures-core = { version = "0.3.31" }
futures-util = { version = "0.3.31" }
bytes = { version = "1.10.0" }
chrono = { version = "0.4.39", features = ["serde"] }
config = { version = "0.15.8" }
http = { version = "1.2.0" }
http-body-util = { version = "0.1.2" }
pretty_assertions = { version = "1.4.1" }
proc-macro2 = { version = "1.0.93" }
quote = { version = "1.0.38" }
regex = { version = "1.11.1" }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.138" }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres", "migrate", "uuid", "chrono"] }
syn = { version = "2.0.98" }
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["trace", "catch-panic"] }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19" }
urlencoding = { version = "2.1.3" }
uuid = { version = "1.13.2", features = ["serde"] }


[dependencies]
assert_json = { workspace = true }
async-trait = { workspace = true }
async-stream = { workspace = true }
axum = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
config = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
urlencoding = { workspace = true }
uuid = { workspace = true }


sql = { path = "./lib/sql" }
macros = { path = "./macros" }
